syntax = "proto3";
option csharp_namespace = "V5RPC.Proto";
import "DataStructures.proto";

enum EventType {
	JudgeResult = 0;
	MatchStart = 1;
	MatchStop = 2;
}

message EventArguments {
    oneof argument {
        JudgeResultEvent judge_result = 1;
		Field field = 2;
    }
}

message JudgeResultEvent {
    enum ResultType {
		NormalMatch = 0;
		EndGame = 1;
		PlaceKick = 2;
		GoalKick = 3;
		PenaltyKick = 4;
		FreeKickRightTop = 5;
		FreeKickRightBot = 6;
		FreeKickLeftTop = 7;
		FreeKickLeftBot = 8;
    }

    ResultType type = 1;
    Side actor = 2;
    string reason = 3;
}
